# more

./: .gitignore  README.md  docker-compose.langfuse.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  domain.py  ingest.py  llm.py  main.py  notes.py  observability.py  observability_langfuse.py  runtime_control.py  runtime_registry.py  search.py  workspace_fs.py
backend/app/agent/: __init__.py  context.py  coordinator.py  errors.py  events.py  fallback.py  outcome.py  planner.py  ports.py  requests.py  runtime.py
backend/app/api/: __init__.py  deps.py  errors.py  schemas.py
backend/app/api/routes/: __init__.py  approvals.py  conversations.py  files.py  ingest.py  (+7 more)
backend/app/infrastructure/: __init__.py  file_lock.py  mcp_stdio.py  watcher.py
backend/app/mcp/: __init__.py  service.py
backend/app/prompts/: __init__.py  harness.py  registry.py
backend/app/providers/: __init__.py  base.py  litellm_provider.py
backend/app/services/: __init__.py  answering.py  context_packing.py  conversations.py  memory.py  memory_extraction.py  retrieval.py  run_scope.py  search.py  token_budget.py  turn_context.py  turn_state.py
backend/app/skills/: __init__.py  service.py
backend/app/stores/: __init__.py  approvals.py  base.py  checkpoints.py  conversations.py  mcp_servers.py  memory_candidates.py  preferences.py  skills.py  tasks.py  workspace_memory.py
backend/app/tools/: __init__.py  _utils.py  base.py  mcp_tool.py  registry.py
backend/scripts/: demo_load_skill.py  dump_planner_prompt.py  smoke_langfuse.py  verify_langfuse.ps1
(+66 files in other folders)
